More fixes for String::operator+=() on Mac https://bugs.webkit.org/show_bug.cgi?id=95880

Patch by Benjamin Poulain <bpoulain@apple.com> on 2012-09-05
Reviewed by Adam Barth.

Source/WebCore:

Followup for r127574, I forgot some use of strings.

* css/StylePropertySet.cpp:
(WebCore::StylePropertySet::getShorthandValue): Use String builder to construct the shorthand.

Source/WebKit/mac:

* WebView/WebRenderLayer.mm:
(+[WebRenderLayer nameForLayer:]): Use StringBuilder to concatenate the class names
efficiently.
* WebView/WebView.mm:
(+[WebView _decodeData:]): This is a legitimate use of String::append(), there
is no other concatenation done on that string.

Source/WebKit2:

* UIProcess/WebInspectorProxy.cpp:
(WebKit::WebInspectorProxy::createInspectorPage): This is a legitimate use of append(),
there is no other concatenation outside that branch.
* WebProcess/Plugins/Netscape/NetscapeBrowserFuncs.cpp:
(WebKit::parseRFC822HeaderFields): Use string operators instead of +=.
* WebProcess/Plugins/Netscape/NetscapePlugin.cpp:
(WebKit::NetscapePlugin::userAgent): Another legitimate use of append().


Canonical link: https://commits.webkit.org/113751@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127639 268f45cc-cd09-0410-ab3c-d52691b4dbfc